Fixed filter z-index

--- a/src/components/directory/DirectoryFilterManager.module.css
+++ b/src/components/directory/DirectoryFilterManager.module.css
@@ -15,7 +15,7 @@
   flex-wrap: wrap; /* Allows wrapping on tablets */
   position: sticky;
   top: 5px;
-  z-index: 40;
+  z-index: 9999;
 }
 
 .toggle-filters-btn {
